@@ -1,4 +1,4 @@
-DIST i3-3.a-bf2.tar.bz2 65619 RMD160 701302b2937fb78d350cb2f8ba041258186b7762 SHA1 767788683f189925e0e9c3dc8fd29982599671f6 SHA256 64d8f4f165cc15a9229acfac4b106ab470e0d28cc176931a7de9f5476b0a24ba
-EBUILD i3-3a_p2.ebuild 876 RMD160 6de936b33a07241ea90ce0c909cb5e6f24d58275 SHA1 fa1f31a5a38fa4cde0f9bc9857ee7c89fee2a4d4 SHA256 0366c18642ec24f53dc9bda85d16050c39baa890e1ca274800c86291984af1eb
-MISC ChangeLog 434 RMD160 99209ac2b5bddd1d85d37b3df6849f1e4e0e3dc0 SHA1 932cc5821898b8755fb71517784b6cfc300f5a63 SHA256 7fee53e6931b31866f8360e6d083adf0c277fbc9e8c5be2888b65121a94ed610
+DIST i3-3.b.tar.bz2 97884 RMD160 d0ccbd97e5b1005145adfb95ac8cb3d222b43305 SHA1 e33e6c0ee2190f16b897ce916be52e61aa29efe9 SHA256 87330b10fc7482971462fd65fceb0b30cb5f686a180ff29e06bd7f3f89c4194e
+EBUILD i3-3b.ebuild 976 RMD160 78b0f4699e4c48f677c02b1c9087b07b9ef31dc1 SHA1 c180a890d7416ce188c512ca98f073a52507f85b SHA256 8f0769082b8d9f7d2d1cd2506b7b479e6125213377df5433cc3b27e7327ec00e
+MISC ChangeLog 592 RMD160 ecd6dc1807087dcd880524b171a9cacb61e3503e SHA1 0ec8ff3b597321e6f9643644e1b6d4a9faa11834 SHA256 813cba0bd60ce05951490bd9e9edc137d67173a5dcafc56a1342c25bbb481d5e
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
